2018-09-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 43366: Completion/Zsh/Command/_compdef: Change and add sources
	for completed completion function names.

2018-09-05  dana  <dana@dana.is>

	* 43372: Completion/Linux/Command/_e2label: Add completion for
	e2label

2018-09-05  Peter Stephenson  <p.stephenson@samsung.com>

	* 43375 with fix from 43390: Test/A05execution.ztst: don't
	assume path for sh and echo, work it out.

2018-09-05  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cf 43373): Etc/creating-a-release.txt: Add two
	caveats: no local modifications, and need to build in-tree.

2018-09-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 43370: Etc/creating-a-release.txt: New maintainer-facing
	documentation.

	* unposted: Config/version.mk: Post-release version bump.

	* unposted: Config/version.mk: Release 5.6.

2018-09-03  Anthony Sottile  <asottile@umich.edu>

	* CVE-2018-0502, CVE-2018-13259: Fix two security issues in
	shebang line parsing. [With Buck Evan]

2018-09-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 43367: Makefile.in: Add maintainer targets 'tarxz-src' and
	'targz-src'.

2018-09-03  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* unposted: NEWS: mention Inf/NaN floating point changes

	* unposted: Makefile.in: further to 43358 use same patchlevel
	form for the release file

2018-09-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 43333: Etc/Makefile.in: Generate FAQ.html in the builddir,
	rather than in the srcdir, and add it to the default target of
	the Etc/ subdirectory.

2018-09-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 43365: Src/Zle/zle_keymap.c, Src/Zle/zle_main.c,
	Src/Zle/zle_misc.c, Src/Zle/zle_vi.c: Don't handle ZLE timed
	functions if just reading a single key.

2018-08-31  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 43358: Src/zsh.mdd: enforce consistent patchlevel form

	* 43357: configure.ac: isinf/isnan can be macros rather
	than functions so need a custom configure test
